Implement all of Steven's suggestions from his initial view of this PR.
Signed-off-by: Marc Kriguer <marc.kriguer@swirldslabs.com>